<!--
  ~ Copyright (c) 2018. YPY Global - All Rights Reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at.
  ~
  ~         http://ypyglobal.com/sourcecode/policy
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sleep_mode"
        android:title="@string/title_sleep_mode"
        android:icon="@drawable/ic_sleep_mode_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rate_me"
        android:orderInCategory="100"
        android:title="@string/title_rate_me"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_facebook"
        android:orderInCategory="100"
        android:title="@string/title_facebook"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_twitter"
        android:orderInCategory="100"
        android:title="@string/title_twitter"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_insta"
        android:orderInCategory="100"
        android:title="@string/title_instagram"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_website"
        android:orderInCategory="100"
        android:title="@string/title_website"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/title_menu_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="100"
        android:title="@string/title_contact_us"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="100"
        android:title="@string/title_privacy_policy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_term_of_use"
        android:orderInCategory="100"
        android:title="@string/title_term_of_use"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_setting_ads"
        android:orderInCategory="100"
        android:title="@string/title_setting_ads"
        app:showAsAction="never"/>


</menu>